# clinical_mining

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-27-report-llm.md
docs/superpowers/specs/: 2026-03-27-report-llm-design.md
notebooks/: wip.ipynb
scripts/: validation_report.py
src/aact/: main.py  tables.py  utils.py
src/clinical_mining/: cli.py  config.yaml  main.py  schemas.py
src/clinical_mining/aact/: config.yaml  main.py  utils.py
src/clinical_mining/data_sources/: aact.py  ema.py  pmda.py  pubmed.py  ttd.py
src/clinical_mining/data_sources/aact/: __init__.py  aact.py  clinical_report.py  llm_extractor.py  mapping_utils.py
src/clinical_mining/data_sources/chembl/: curation.py  drug_warnings.py  indications.py
src/clinical_mining/dataset/: __init__.py  clinical_indication.py  clinical_record.py  clinical_report.py  clinical_study.py  clinical_trial.py  drug_indication.py
src/clinical_mining/prompts/: aact_llm.txt
src/clinical_mining/recipe/: aact_llm_extractor.yaml  clinical_report_generation.yaml
src/clinical_mining/utils/: db.py  mapping.py  pipeline.py  polars_helpers.py  spark.py  spark_helpers.py  utils.py
src/clinical_mining/workflows/: llm.py
src/utils/: db.py
tests/: conftest.py  test_aact.py  test_europepmc.py  test_llm_extraction.py  test_pubmed.py
