[project]
name = "clinical-mining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "connectorx>=0.4.3",
    "cx-oracle>=8.3.0",
    "fastexcel>=0.16.0",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "ontoma",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "polars>=1.34.0",
    "polars-hash>=0.5.5",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.42",
]

[project.scripts]
clinical_mining = "clinical_mining.cli:main"

[project.optional-dependencies]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["src/clinical_mining"]

[tool.uv.sources]
ontoma = { git = "https://github.com/opentargets/OnToma", rev = "il_filter_drug_label_lut" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
