[project]
name = "clinical-mining"
version = "0.6.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "connectorx>=0.4.3",
    "fastexcel>=0.16.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "ontoma[ner]>=2.4.1",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "polars>=1.34.0",
    "polars-hash>=0.5.5",
    "pyarrow>=22.0.0",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.42",
    "openai>=2.37.0",
    "biopython>=1.87",
]

[project.scripts]
clinical_mining = "clinical_mining.cli:main"

[project.optional-dependencies]
dev = [
    "ty>=0.0.15",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
oracle = [
    "cx-oracle>=8.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/clinical_mining"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
